Update function : change font for file

--- a/ConsoleApp1/Config.json
+++ b/ConsoleApp1/Config.json
@@ -1,4 +1,4 @@
 ﻿{
-   "folder_scan": "F:\\Tools\\New folder",
+   "folder_scan": "D:\\New folder",
    "filepath_default_header_footer": "F:\\Mẫu-biên-soạn.docx"
 }
